[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
colored = "2.1.0"
rand = "0.8.5"
tui = "0.19.0"
json = "0.12.4"
clap = "4.5.8"
text_io = "0.1.12"
serde = "1.0.204"

[dev-dependencies]
lazy_static = "1.4"
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"
